--- a/style.css
+++ b/style.css
@@ -187,6 +187,36 @@ footer{
     grid-area: footer;
 }
 
+/* Animações */
+
+.item img {
+    transition: all 200ms ease-out;
+  
+    display: block;
+  }
+
+.item {
+    --delay: .4s;
+    animation: appear .4s var(--delay) backwards;
+}
+
+.item img:hover {
+    filter: hue-rotate(7deg) contrast(101%) saturate(200%);
+    transform: scale(1.1) rotate(-2deg);
+  }
+
+   
+@keyframes appear {
+    0% {
+      opacity: 0;
+      transform: scale(0.7);
+    }
+  
+    50% {
+      transform: scale(1.2);
+    }
+}
+
 /* Media Screen */
   
 @media screen and (min-width: 1000px) {
